Modify content to my resume

--- a/index.html
+++ b/index.html
@@ -13,22 +13,19 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
   </head>
   <body>
-    <div id="wallpaper" class="wallpaper" data-image="images/austria.jpg"></div>
+    <div id="wallpaper" class="wallpaper" data-image="images/background.jpg"></div>
     <div class="content">
       <aside class="side">
         <figure id="picture" class="picture">
           <div class="picture-shadow"></div>
           <img id="pictureImage" class="picture-image"
-               src="images/alex.jpg"
-               srcset="images/alex.jpg 1x,
-                       images/alex@2x.jpg 2x,
-                       images/alex@3x.jpg 3x"
-               alt="Portrait of Alex Jefferson"
+               src="images/profile.jpg"
                width="320"
                height="320">
         </figure>
       </aside>
       <main class="about">
+
         <h1 class="name">
           Hi, I'm Bank Phuttipong
         </h1>
@@ -38,35 +35,100 @@
         <hr class="hr">
         <div class="description">
           <p>
-            I spend my time traveling the world,
-            helping startups and tech businesses
-            hire the best people.
+            I am a man in digital world
+            who would like to be driven myself for future.
+            A self-thaught data, Maybe not a perfectionist
+            who truly believes the perfect thing still lacks the perfectness.
           </p>
         </div>
         <div class="contact">
-          <a class="button" href="mailto:youremail@example.com">
+          <a class="button" href="phuttipong.a@montivory.com">
             Get in touch
           </a>
         </div>
         <ul class="social">
           <li>
-            <a href="https://twitter.com/jgthms">
-              <i class="fab fa-twitter"></i>
+            <a href="https://www.facebook.com/ptpbank">
+              <i class="fab fa-facebook"></i>
             </a>
           </li>
           <li>
-            <a href="https://github.com/jgthms">
+            <a href="https://github.com/ptpbank">
               <i class="fab fa-github"></i>
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/">
+            <a href="https://www.linkedin.com/in/phuttipong-anantapanya-4b623616a/">
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
         </ul>
+        <div class="experience">
+          <h1 class="name">Experience</h1><br>
+
+          <table>
+            <tr>
+              <th class="space">Data Analyst at Montivory Co., Ltd.</th>
+              <td class="space">Aug 2019 - Present</td>
+            </tr>
+            <tr>
+              <th class="space">Internship Data Analyst at Montivory Co., Ltd.</th>
+              <td class="space">Jun 2019 - Jul 2019</td>
+            </tr>
+            <tr>
+              <th class="space">Content Specialist at TopBright Digital Agency</th>
+              <td class="space">Apr 2019 - Nov 2019</td>
+            </tr>
+            <tr>
+              <th class="space">Content Editor at Bangkok Health Research Center</th>
+              <td class="space">Dec 2018 - Feb 2020</td>
+            </tr>
+            <tr>
+              <th class="space">Internship Content Editor at LIKEME Agency</th>
+              <td class="space">May 2018 - Aug 2018</td>
+            </tr>
+            <tr>
+              <th class="space">Content Writer at Easymap Co., Ltd.</th>
+              <td class="space">May 2016 - Dec 2016</td>
+            </tr>
+          </table>
+
+        </div>
       </main>
+
     </div>
+
+    <div class="content">
+      <h1 class="name">Activities</h1><br>
+
+      <table>
+        <tr>
+          <th class="space">Pitch in Startup Thailand 2019 at Chiangmai Thailand</th>
+          <td class="space">Apr 2019</td>
+        </tr>
+        <tr>
+          <th class="space">Finalist & Accelerator Program in Business Brotherhood 2018</th>
+          <td class="space">Mar 2018</td>
+        </tr>
+        <tr>
+          <th class="space">Master of Ceremony IT Ambassador at IT KMITL</th>
+          <td class="space">Oct 2017</td>
+        </tr>
+        <tr>
+          <th class="space">Head of IT Comunities at IT KMITL</th>
+          <td class="space">Aug 2017</td>
+        </tr>
+        <tr>
+          <th class="space">Head of PR ITCAMP14 at IT KMITL</th>
+          <td class="space">Aug 2017</td>
+        </tr>
+        <tr>
+          <th class="space">IT CheerLeader in IT3K</th>
+          <td class="space">Sep 2016</td>
+        </tr>
+      </table>
+    </div>
+
     <noscript>
       <style type="text/css">
         .wallpaper {
