edit title and add phone number

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alex Jefferson – Tech Recruiter</title>
+    <title>Bank Phuttipong - Resume</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/minireset.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -62,6 +62,7 @@
               <i class="fab fa-linkedin"></i>
             </a>
           </li>
+            <p>Tel 0655524165</p>
         </ul>
         <div class="experience">
           <h1 class="name">Experience</h1><br>
